# ai-newsletter-generator

./: .gitignore  .replit  README.md  USER_GUIDE.md  app.py  auth.py  categories.json  categories.json.backup  category_manager.py  create_github_repo.py  database.py  deduplicator.py  feed_manager.py  feeds.json  feeds.json.backup  generate_now.py  latest_newsletter.html  latest_newsletter.txt  newsletter.py  newsletter_config.py  newsletter_configs.json  newsletter_configs.json.backup  newsletters.json  newsletters.json.backup  pyproject.toml  replit.md  resend_client.py  scheduler.py  scraper.py  sendfox_client.py  shared_resources.py  summarizer.py  test_auth.py  test_newsletter.py  user_database.py
attached_assets/: Pasted--AI-Daily-Newsletter-October-17-2025-Your-curated-AI-technology-newsletter-Total-Stori-1760726631087_1760726631089.txt
