[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "numpy>=2.3.3",
    "openai>=2.2.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "trafilatura>=2.0.0",
]
