[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "feedparser>=6.0.12",
    "numpy>=2.3.3",
    "openai>=2.2.0",
    "pandas>=2.3.3",
    "pygithub>=2.8.1",
    "requests>=2.32.5",
    "resend>=2.17.0",
    "schedule>=1.2.2",
    "scikit-learn>=1.7.2",
    "streamlit>=1.50.0",
    "trafilatura>=2.0.0",
    "urllib3>=2.5.0",
]
